<resources>
    <string name="app_name">Music Player</string>
    <string name="connection_menu_icon_description">Music Note</string>
    <string name="connection_menu_icon_text">Music Player</string>
    <string name="connection_menu_header_text">Failed to establish connection.</string>
    <string name="connection_menu_header_text_2">Please enter url to your music player server.</string>
    <string name="connection_menu_input_hint">Enter URL...</string>
    <string name="connection_menu_button_text">Connect</string>
    <string name="music_player_home_item_text">Home</string>
    <string name="music_player_songs_item_text">Songs</string>
    <string name="music_player_playlists_item_text">Playlists</string>
    <string name="music_player_settings_item_text">Settings</string>
    <string name="music_player_login_title">Login</string>
    <string name="music_player_signup_title">Signup</string>
    <string name="music_player_login_title_button">LOG IN</string>
    <string name="music_player_signup_title_button">SIGN UP</string>
    <string name="music_player_login_email_input">Email</string>
    <string name="music_player_login_password_input">Password</string>
    <string name="stay_logged_in_text">stay logged in?</string>
    <string name="forgot_password_button_text">Forgot password?</string>
    <string name="music_player_signup_retype_password_input">Retype password</string>
    <string name="music_player_songs_menu_title">Songs</string>
    <string name="music_player_songs_menu_create_song">ADD</string>
    <string name="songs_menu_search_bar_hint">Search songs...</string>
    <string name="add_song_menu_text">Add a <font color="#DB1D40">music</font> file to get started!</string>
    <string name="add_song_menu_button_text">Add File</string>
    <string name="create_song_menu_header_text"><font color="#DB1D40">CREATE</font> SONG</string>
    <string name="network_connection_error_status_text">503</string>
    <string name="network_connection_error_title_text">NETWORK ERROR</string>
    <string name="network_connection_error_detail_text">Failed to establish connection to server. Try again later.</string>
    <string name="retry_connection_button_text"><font color="#DB1D40">TRY</font> AGAIN</string>
    <string name="create_song_item_title_hint"><font color="#DB1D40">SONG</font> TITLE</string>
    <string name="create_song_item_author_hint"><font color="#DB1D40">AUTHOR</font> NAME</string>
    <string name="create_song_item_submit_button_text">CREATE SONG</string>
    <string name="now_playing_text">Now playing</string>
    <string name="settings_menu_header_text">Settings</string>
    <string name="account_settings_title">Account</string>
    <string name="app_settings_title">App</string>
    <string name="account_settings_email_title">Email</string>
    <string name="account_settings_edit_button_text">Edit Account</string>
    <string name="account_settings_toolbar">Account Settings</string>
    <string name="app_settings_toolbar">App Settings</string>
    <string name="playlist_menu_title">Playlists</string>
    <string name="playlist_menu_create_button">CREATE</string>
    <string name="playlist_menu_search_hint">Search playlists...</string>
    <string name="create_playlist_menu_title"><font color="#DB1D40">CREATE</font> PLAYLIST</string>
    <string name="create_playlist_item_title_hint"><font color="#DB1D40">PLAYLIST</font> TITLE</string>
    <string name="create_playlist_button_text">CREATE PLAYLIST</string>
    <string name="add_to_playlist_title">Add <font color="#DB1D40">song</font> to playlist.</string>
    <string name="music_item_options">Options</string>
    <string name="add_song_from_youtube">Add From Youtube</string>
    <string name="create_song_from_yt_title">Paste in a <font color="#DB1D40">youtube</font> video url.</string>
    <string name="upload_youtube_link"><font color="#DB1D40">Upload</font> Link</string>
    <string name="recently_played_songs_title">Recent songs</string>
    <string name="home_menu_header_title">Home</string>
</resources>
