<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/songs_menu_background_primary">
    <TextView
            android:id="@+id/network_error_status_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/network_connection_error_status_text"
            android:textColor="@color/app_secondary_color"
            android:textSize="80sp"
            app:layout_constraintVertical_bias="0.3"/>
    <TextView
            android:id="@+id/network_connection_error_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/network_error_status_code_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/network_connection_error_title_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintVertical_bias="0.03"/>
    <TextView
            android:id="@+id/network_connection_error_detail_text"
            android:layout_width="0dp"
            android:maxWidth="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.8"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/network_connection_error_title_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/network_connection_error_detail_text"
            android:textColor="@color/grey"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.08"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retry_connection_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintTop_toBottomOf="@id/network_connection_error_detail_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/retry_connection_button_text"
            android:background="@drawable/create_item_button"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintVertical_bias="0.15"
            android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>