<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/connection_activity_background">
    <ImageView
            android:id="@+id/connection_menu_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="160dp"
            android:layout_width="160dp"
            android:tint="@color/white"
            android:src="@drawable/outline_music_note_24"
            android:contentDescription="@string/connection_menu_icon_description"
            app:layout_constraintVertical_bias="0.169"/>
    <TextView
            android:id="@+id/connection_menu_icon_text"
            app:layout_constraintTop_toBottomOf="@id/connection_menu_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_menu_icon_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/connection_menu_header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/connection_menu_icon_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/connection_menu_header_text"
            android:maxWidth="350dp"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            app:layout_constraintVertical_bias="0.202"/>
    <TextView
            android:id="@+id/connection_menu_header_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/connection_menu_header_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/connection_menu_header_text_2"
            android:maxWidth="360dp"
            android:textSize="19sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintVertical_bias="0.063"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/connection_menu_input_container"
            android:layout_width="300dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/connection_menu_header_text_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/connection_input"
            app:layout_constraintVertical_bias="0.2">
        <ImageView
                android:id="@+id/connection_input_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/connection_menu_input"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="10dp"
                android:tint="@color/white"
                android:src="@drawable/outline_wifi_24"/>
        <EditText
                android:id="@+id/connection_menu_input"
                android:layout_width="250dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/connection_input_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/connection_menu_input_hint"
                android:background="@drawable/connection_input"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:padding="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/connection_menu_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/connection_menu_button_text"
            app:layout_constraintTop_toBottomOf="@id/connection_menu_input_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/connection_button"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>