<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/songs_menu_header_container"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true">
    <TextView
            android:id="@+id/music_player_songs_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:text="@string/music_player_songs_menu_title"
            android:textColor="@color/white"
            android:textSize="44sp"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/songs_menu_add_song_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/music_player_songs_menu_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.45"
            android:background="@drawable/create_item_button"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/music_player_songs_menu_create_song"
            android:textSize="20sp"
            android:textColor="@color/app_secondary_color"
            android:textStyle="bold"/>
    <EditText
            android:id="@+id/songs_menu_search_bar_input"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginTop="20dp"
            android:layout_height="50dp"
            android:drawableStart="@drawable/outline_search_black_36"
            app:layout_constraintTop_toBottomOf="@id/songs_menu_add_song_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/songs_menu_search_bar_hint"
            android:textColor="@color/black"
            android:background="@drawable/songs_search_bar"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionSearch"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>