<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/music_player_login_background">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_player_login_title_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.03">
        <TextView
                android:id="@+id/music_player_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_player_login_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="38sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/music_player_login_title_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/music_player_signup_title_button"
                app:layout_constraintTop_toBottomOf="@id/music_player_login_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/music_player_login_title_button"
                android:background="transparent"
                app:style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginEnd="7dp"
                android:layout_marginTop="16dp"/>
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/music_player_signup_title_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/music_player_login_title_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/music_player_login_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/music_player_signup_title_button"
                android:background="transparent"
                app:style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_player_login_inputs_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/music_player_login_title_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.07">
        <EditText
                android:id="@+id/login_email_input"
                android:layout_width="290dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/login_password_input"
                android:background="@drawable/auth_form_input"
                android:hint="@string/music_player_login_email_input"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_marginVertical="10dp"/>
        <EditText
                android:id="@+id/login_password_input"
                android:layout_width="290dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/login_email_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/auth_form_input"
                android:hint="@string/music_player_login_password_input"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:layout_marginVertical="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>