<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/music_player_signup_inputs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0">
        <EditText
                android:id="@+id/signup_email_input"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:minWidth="200dp"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/auth_form_input"
                android:hint="@string/music_player_login_email_input"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textEmailAddress"
                android:layout_marginTop="40dp"/>
        <EditText
                android:id="@+id/signup_password_input"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:minWidth="200dp"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintTop_toBottomOf="@id/signup_email_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/signup_retype_password_input"
                android:background="@drawable/auth_form_input"
                android:hint="@string/music_player_login_password_input"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textPassword"
                app:layout_constraintVertical_bias="0.4"
                android:layout_marginTop="30dp"/>
        <EditText
                android:id="@+id/signup_retype_password_input"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:minWidth="200dp"
                app:layout_constraintWidth_percent="0.75"
                app:layout_constraintTop_toBottomOf="@id/signup_password_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/auth_form_input"
                android:hint="@string/music_player_signup_retype_password_input"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:layout_marginTop="30dp"
                app:layout_constraintVertical_bias="0.4"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/music_player_signup_button"
            android:layout_width="0dp"
            android:minWidth="200dp"
            app:layout_constraintWidth_percent="0.75"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/music_player_signup_inputs_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:background="@drawable/auth_form_button"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/music_player_signup_title"
            android:textSize="20sp"
            android:textColor="@color/app_secondary_color"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="30dp"/>
    <TextView
            android:id="@+id/signup_error_message_text"
            app:layout_constraintWidth_percent="0.55"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/music_player_signup_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/app_secondary_color"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintVertical_bias="0.08"
            android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>