<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/playlist_menu_header_container">
    <TextView
            android:id="@+id/playlist_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:text="@string/playlist_menu_title"
            android:textColor="@color/white"
            android:textSize="44sp"/>
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/playlist_menu_create_button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            app:layout_constraintTop_toBottomOf="@id/playlist_menu_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.45"
            android:background="@drawable/create_item_button"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/playlist_menu_create_button"
            android:textSize="20sp"
            android:textColor="@color/app_secondary_color"
            android:textStyle="bold"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playlist_menu_searchbar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:minWidth="200dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintTop_toBottomOf="@id/playlist_menu_create_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/songs_search_bar">
        <ImageView
                android:id="@+id/playlist_menu_search_bar_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/outline_search_black_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.03"
                android:foregroundTint="@color/songs_menu_foreground_primary"/>
        <EditText
                android:id="@+id/playlist_menu_search_bar_input"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/playlist_menu_search_bar_icon"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:hint="@string/playlist_menu_search_hint"
                android:textColor="@color/black"
                android:background="@null"
                android:inputType="textNoSuggestions"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>